<resources>
    <string name="app_name">BottomNavigation</string>
    <string name="home">Home</string>
    <string name="dairy">Dairy</string>
    <string name="manage">Manage</string>
    <string name="health_tips">Health Tips</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="manage_fragment">Manage Fragment</string>
    <string name="dairy_fragment">Dairy Fragment</string>
    <string name="menu_fragment">Menu Fragment</string>
    <string name="health_tips_fragment">Health Tips Fragment</string>
</resources>